# boards

./: .gitignore  Cargo.toml  PROPOSAL.md  README.md  justfile
i18n/en/: boards.ftl
i18n/fr/: boards.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  dialog.rs  i18n.rs  main.rs  menu_bar.rs
src/board/: context.rs  context_menu.rs  dialog.rs  message.rs  mod.rs  view.rs
src/card/: context_menu.rs  dialog.rs  message.rs  mod.rs  widget.rs
src/checklist/: message.rs  mod.rs
src/column/: context_menu.rs  dialog.rs  message.rs  mod.rs  widget.rs
src/db/: mod.rs  store.rs
src/dnd/: message.rs  mod.rs
src/list/: context_menu.rs  dialog.rs  message.rs  mod.rs  widget.rs
src/models/: board.rs  card.rs  checklist.rs  label.rs  list.rs  mod.rs
src/pages/: board.rs  mod.rs
src/storage/: mod.rs  store.rs
src/tag/: dialog.rs  message.rs  mod.rs  widget.rs
src/widgets/: card_widget.rs  content_unavailable.rs  dnd.rs  label_badge.rs  list_column.rs  mod.rs  new_card_input.rs
