[package]
name = "boards"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = " Boards is a Trello like application for COSMIC "
repository = "https://github.com/cosmic-utils/boards"

[dependencies]
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
directories = "5"
tempfile = "3"
icon-index = { git = "https://github.com/edfloreshz/icon-index" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # About widget for the app
    "about",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Allows multiple windows to be open simultaneously
    "multi-window",
    # Markdown widget
    "markdown",
    # QR code widget
    "qr_code",
    # GPU-accelerated rendering
    "wgpu",
]

[target.'cfg(target_os = "linux")'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Add Wayland support to winit
    "wayland",
    # xdg portal dialogs on Linux
    "xdg-portal"
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { git = "https://github.com/edfloreshz/libcosmic", branch = "patch-1" }
# cosmic-config = { git = "https://github.com/edfloreshz/libcosmic", branch = "patch-1" }
# cosmic-theme = { git = "https://github.com/edfloreshz/libcosmic", branch = "patch-1" }

# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
